--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@tsparticles/react": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.9.4",
     "lucide-react": "^0.507.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
