--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "lucide-react": "^0.507.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
     "tsparticles": "^3.8.1"
