--- a/package.json
+++ b/package.json
@@ -6,37 +6,35 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "eslint",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.5",
-    "@tsparticles/react": "^3.0.0",
+    "@tailwindcss/vite": "^4.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
-    "framer-motion": "^12.9.4",
-    "lucide-react": "^0.507.0",
+    "framer-motion": "^12.10.5",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
-    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.3",
+    "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.5",
-    "tsparticles": "^3.8.1"
+    "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@types/react": "^19.0.10",
+    "@eslint/js": "^9.26.0",
+    "@types/react": "^19.1.3",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.22.0",
+    "eslint": "^9.26.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "vite": "^6.3.1"
+    "globals": "^16.1.0",
+    "prettier": "3.5.3",
+    "vite": "^6.3.5"
   }
 }
