--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "proptrack",
   "private": true,
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0-rc.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major",
+    "version:alpha": "npm version prerelease --preid=alpha",
+    "version:beta": "npm version prerelease --preid=beta",
+    "version:rc": "npm version prerelease --preid=rc"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
